--- a/app/src/main/res/layout/activity_purchase_in_storage.xml
+++ b/app/src/main/res/layout/activity_purchase_in_storage.xml
@@ -75,7 +75,7 @@
                             android:layout_width="0dp"
                             android:layout_height="40dp"
                             android:layout_weight="3.5"
-                            android:background="@android:drawable/edit_text"
+                            android:background="@drawable/bg_edittext_selector"
                             android:gravity="center"
                             android:selectAllOnFocus="true"
                             android:singleLine="true" />
@@ -212,7 +212,7 @@
                             android:layout_alignParentRight="true"
                             android:layout_alignParentTop="true"
                             android:layout_weight="8"
-                            android:background="@android:drawable/edit_text"
+                            android:background="@drawable/bg_edittext_selector"
                             android:gravity="center_vertical"
                             android:imeOptions="actionNone"
                             android:selectAllOnFocus="true"
@@ -387,7 +387,7 @@
                             android:layout_height="40dp"
                             android:layout_marginRight="3dp"
                             android:layout_weight="1"
-                            android:background="@android:drawable/edit_text"
+                            android:background="@drawable/bg_edittext_selector"
                             android:gravity="center"
                             android:imeOptions="actionNone"
                             android:singleLine="true" />
@@ -403,7 +403,7 @@
                             android:layout_height="40dp"
                             android:layout_marginLeft="3dp"
                             android:layout_weight="1"
-                            android:background="@android:drawable/edit_text"
+                            android:background="@drawable/bg_edittext_selector"
                             android:gravity="center"
                             android:inputType="numberDecimal"
                             android:singleLine="true"
@@ -477,7 +477,7 @@
                             android:layout_height="40dp"
                             android:layout_marginLeft="3dp"
                             android:layout_weight="1"
-                            android:background="@android:drawable/edit_text"
+                            android:background="@drawable/bg_edittext_selector"
                             android:inputType="numberDecimal"
                             android:singleLine="true"
                             android:textSize="15sp" />
