--- a/app/src/main/res/drawable/edittext_normal.xml
+++ b/app/src/main/res/drawable/edittext_normal.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FFFFFF" />
+    <solid android:color="#FFFFFF" /><!--填充颜色-->
     <corners android:radius="1dip"/>
+    <!--定义圆角-->
     <stroke
         android:width="1dip"
-        android:color="#BDC7D8" />
+        android:color="#BDC7D8" /><!--描边-->
 </shape>
