--- a/app/src/main/res/layout/activity_other_out_store.xml
+++ b/app/src/main/res/layout/activity_other_out_store.xml
@@ -5,8 +5,7 @@
     android:id="@+id/drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
-    tools:context="com.fangzuo.assist.Activity.PurchaseInStorageActivity">
+    android:background="@android:color/white">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -77,7 +76,7 @@
                             android:layout_width="0dp"
                             android:layout_height="40dp"
                             android:gravity="center"
-                            android:background="@android:drawable/edit_text"
+                            android:background="@drawable/bg_edittext_selector"
                             android:layout_weight="3.5" />
                         <RelativeLayout
                             android:id="@+id/search_supplier"
@@ -213,7 +212,7 @@
                             android:layout_marginLeft="10dp"
                             android:layout_marginRight="10dp"
                             android:layout_weight="8"
-                            android:background="@android:drawable/edit_text"
+                            android:background="@drawable/bg_edittext_selector"
                             android:singleLine="true" />
 
                         <RelativeLayout
@@ -387,7 +386,7 @@
                             android:layout_height="40dp"
                             android:layout_weight="1"
                             android:gravity="center"
-                            android:background="@android:drawable/edit_text"
+                            android:background="@drawable/bg_edittext_selector"
                             android:singleLine="true"
                             android:textSize="15sp" />
                     </LinearLayout>
@@ -455,7 +454,7 @@
                             android:layout_width="0dp"
                             android:layout_height="40dp"
                             android:layout_weight="1"
-                            android:background="@android:drawable/edit_text"
+                            android:background="@drawable/bg_edittext_selector"
                             android:singleLine="true"
                             android:textSize="19sp" />
                     </LinearLayout>
@@ -697,7 +696,7 @@
                 android:id="@+id/ed_zhaiyao"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@android:drawable/edit_text"
+                android:background="@drawable/bg_edittext_selector"
                 android:singleLine="true"
                 android:textSize="19sp" />
 
