--- a/app/src/main/res/layout/activity_sold_out.xml
+++ b/app/src/main/res/layout/activity_sold_out.xml
@@ -103,7 +103,7 @@
                             android:layout_width="0dp"
                             android:layout_height="40dp"
                             android:layout_weight="4"
-                            android:background="@android:drawable/edit_text"
+                            android:background="@drawable/bg_edittext_selector"
                             android:gravity="center"
                             android:selectAllOnFocus="true"
                             android:singleLine="true" />
@@ -165,7 +165,7 @@
                             android:layout_marginRight="10dp"
                             android:layout_weight="8"
                             android:selectAllOnFocus="true"
-                            android:background="@android:drawable/edit_text"
+                            android:background="@drawable/bg_edittext_selector"
                             android:gravity="center_vertical"
                             android:imeOptions="actionNone"
                             android:singleLine="true" />
@@ -409,7 +409,7 @@
                             android:layout_height="40dp"
                             android:layout_marginRight="3dp"
                             android:layout_weight="1"
-                            android:background="@android:drawable/edit_text"
+                            android:background="@drawable/bg_edittext_selector"
                             android:inputType="numberDecimal"
                             android:singleLine="true"
                             android:textSize="19sp" />
@@ -425,7 +425,7 @@
                             android:layout_height="40dp"
                             android:layout_marginLeft="3dp"
                             android:layout_weight="1"
-                            android:background="@android:drawable/edit_text"
+                            android:background="@drawable/bg_edittext_selector"
                             android:inputType="numberDecimal"
                             android:singleLine="true"
                             android:textSize="19sp" />
@@ -498,7 +498,7 @@
                             android:layout_height="40dp"
                             android:layout_marginLeft="3dp"
                             android:layout_weight="1"
-                            android:background="@android:drawable/edit_text"
+                            android:background="@drawable/bg_edittext_selector"
                             android:inputType="numberDecimal"
                             android:singleLine="true"
                             android:textSize="15sp" />
