--- a/app/src/main/res/layout/list_layout.xml
+++ b/app/src/main/res/layout/list_layout.xml
@@ -9,11 +9,13 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:id="@+id/cb_ischeck"/>
-       <RelativeLayout
+       <LinearLayout
+           android:orientation="vertical"
            android:layout_toRightOf="@id/cb_ischeck"
+           android:layout_toEndOf="@+id/cb_ischeck"
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
-           android:layout_height="180dp">
+           android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
@@ -38,16 +40,12 @@
                android:layout_height="wrap_content"
                android:id="@+id/productId"
                android:textColor="@color/black"
-               android:textSize="18sp"
-               android:layout_below="@id/lll"/>
+               android:textSize="18sp"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:id="@+id/ll1"
-               android:layout_below="@id/productId"
                android:layout_height="wrap_content">
                <LinearLayout
-
-
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
@@ -72,7 +70,6 @@
 
            <LinearLayout
                android:layout_width="match_parent"
-               android:layout_below="@id/ll1"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <LinearLayout
@@ -121,15 +118,12 @@
 
            </LinearLayout>
 
-
-
            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
-               android:textColor="@color/black"
-               android:layout_alignParentBottom="true"/>
+               android:textColor="@color/black"/>
 
            <LinearLayout
                android:layout_alignParentBottom="true"
@@ -167,6 +161,6 @@
 
 
 
-       </RelativeLayout>
+       </LinearLayout>
 
 </RelativeLayout>
